Some Small Code Improvements
I focused on low-hanging fruits that my IDE proposed while making sure, not to change behavior or potentially breaking any API usage. The changes include but are not limited to:
- replacing lambdas with method references
- Simplifying conditions
- Using methods from the JDK over custom ones.
- Removing No-Ops